syntax = "proto3";

package messages;

message HelloRequest {
	string Name = 1;
}

message HelloResponse {
	string message = 1;
}

service HelloService {
	rpc SayHello (HelloRequest) returns (HelloResponse) {}
}
